syntax = "proto3";

package kaiwa;

option go_package ="./kaiwapb";

message UserRequest{
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message UserResponse{
    string id = 1;
    string name = 2;
    string email = 3;
    string token = 5;
}

service UserService {
    rpc UserLogin(UserRequest) returns (UserResponse) {}
    rpc UserSignUp(UserRequest) returns (UserResponse) {}
}